src/stories/Blocks/registration-page/registration-page.scss
.paragraphs__item--language_selector {
  @include layout-container($_max-width-rich-text);

  margin-bottom: $s-xl;
}

.paragraphs__item--user_registration_section {
  &__button_row {
    @include layout-container($_max-width-rich-text);

    p {
      @include typography($typo__body-medium);
      display: inline-block;
    }
  }

  &__button {
    @include typography($typo__links);

    color: $color__global-grey;
    display: inline-block;
    margin-left: $s-md;

    &::after {
      color: $color__global-grey;
    }
  }

  &__title {
    padding: $s-xl 0;
  }

  &__body {
    padding-top: $s-3xl;

    p {
      margin-bottom: $s-md;
    }
  }

  &__link {
    width: fit-content;
  }

  .rich-text a:hover {
    color: $color__global-white;
    text-decoration: none;
  }
}

